src/test/ui/imports/import-glob-0.stderr
error[E0425]: cannot find function `f999` in this scope
  --> $DIR/import-glob-0.rs:24:5
   |
LL |     f999(); //~ ERROR cannot find function `f999` in this scope
   |     ^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
